crossplatform.mk: add cygwin detection for disabling windows shell tools and path separator hacks in order to allow building via git under windows. also allow path to make command that contains spaces.  - i.e.: git rebase -i --exec "git clean -xdf && make ENABLE_SSL=y EDASQLiteCipher=y -j 16" HEAD~
 - 'cd <dir-name> && $(MAKE)' vs 'cd <dir-name> && $(_MAKE)' -- gnu make is no longer nice enough to do as if there was a + in front of the rule, need to add it ourselves

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -16,29 +16,53 @@ all: gif
 endif
 endif
 
+freetype:
+	@$(call echo,Building FreeType...)
+	+cd freetype-2.3.12 && $(_MAKE)
+	
+jpeg:
+	@$(call echo,Building libjpeg...)
+	+cd jpeg-9a && $(_MAKE)
+
+png:
+	@$(call echo,Building libpng...)
+	+cd libpng-1.6.12 && $(_MAKE)
+
+gif:
+	@$(call echo,Building libungif...)
+	+cd libungif-4.1.1 && $(_MAKE)
+
+z:
+	@$(call echo,Building zlib...)
+	+cd zlib-1.2.8 && $(_MAKE)
+
+ffi:
+	@$(call echo,Building libffi...)
+	+cd libffi-3.0.11 && $(_MAKE)
+
 cleantarget:
-	cd freetype-2.3.12 && $(MAKE) cleantarget
-	cd libpng-1.6.12 && $(MAKE) cleantarget
-	cd zlib-1.2.8 && $(MAKE) cleantarget
-	cd jpeg-9a && $(MAKE) cleantarget
-	cd libungif-4.1.1 && $(MAKE) cleantarget
-	cd libffi-3.0.11 && $(MAKE) cleantarget
+	+cd freetype-2.3.12 && $(_MAKE) cleantarget
+	+cd libpng-1.6.12 && $(_MAKE) cleantarget
+	+cd zlib-1.2.8 && $(_MAKE) cleantarget
+	+cd jpeg-9a && $(_MAKE) cleantarget
+	+cd libungif-4.1.1 && $(_MAKE) cleantarget
+	+cd libffi-3.0.11 && $(_MAKE) cleantarget
 
 clean:
-	cd freetype-2.3.12 && $(MAKE) clean
-	cd libpng-1.6.12 && $(MAKE) clean
-	cd zlib-1.2.8 && $(MAKE) clean
-	cd jpeg-9a && $(MAKE) clean
-	cd libungif-4.1.1 && $(MAKE) clean
-	cd libffi-3.0.11 && $(MAKE) clean
+	+cd freetype-2.3.12 && $(_MAKE) clean
+	+cd libpng-1.6.12 && $(_MAKE) clean
+	+cd zlib-1.2.8 && $(_MAKE) clean
+	+cd jpeg-9a && $(_MAKE) clean
+	+cd libungif-4.1.1 && $(_MAKE) clean
+	+cd libffi-3.0.11 && $(_MAKE) clean
 
 realclean:
-	cd freetype-2.3.12 && $(MAKE) realclean
-	cd libpng-1.6.12 && $(MAKE) realclean
-	cd zlib-1.2.8 && $(MAKE) realclean
-	cd jpeg-9a && $(MAKE) realclean
-	cd libungif-4.1.1 && $(MAKE) realclean
-	cd libffi-3.0.11 && $(MAKE) realclean
+	+cd freetype-2.3.12 && $(_MAKE) realclean
+	+cd libpng-1.6.12 && $(_MAKE) realclean
+	+cd zlib-1.2.8 && $(_MAKE) realclean
+	+cd jpeg-9a && $(_MAKE) realclean
+	+cd libungif-4.1.1 && $(_MAKE) realclean
+	+cd libffi-3.0.11 && $(_MAKE) realclean
 
 distclean:
 	$(MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
@@ -46,27 +70,3 @@ distclean:
 Makefile: ;
 $(_CF_DIR)crossplatform.mk: ;
 $(_CF_DIR)default.cf: ;
-
-freetype:
-	@$(call echo,Building FreeType...)
-	cd freetype-2.3.12 && $(MAKE)
-	
-jpeg:
-	@$(call echo,Building libjpeg...)
-	cd jpeg-9a && $(MAKE)
-
-png:
-	@$(call echo,Building libpng...)
-	cd libpng-1.6.12 && $(MAKE)
-
-gif:
-	@$(call echo,Building libungif...)
-	cd libungif-4.1.1 && $(MAKE)
-
-z:
-	@$(call echo,Building zlib...)
-	cd zlib-1.2.8 && $(MAKE)
-
-ffi:
-	@$(call echo,Building libffi...)
-	cd libffi-3.0.11 && $(MAKE)
