--- a/compiler/bootstrap/Makefile
+++ b/compiler/bootstrap/Makefile
@@ -17,6 +17,26 @@ all: bindir ecere libec ecp ecc ecs
 bindir:
 	$(if $(wildcard $(OBJ)),,$(call mkdir,$(OBJ)))
 
+ecere:
+	@$(call echo,Building ecere...)
+	+cd ecere && $(_MAKE)
+
+libec:
+	@$(call echo,Building ec...)
+	+cd libec && $(_MAKE)
+
+ecp: ecere libec
+	@$(call echo,Building ecp...)
+	+cd ecp && $(_MAKE)
+
+ecc: ecere libec
+	@$(call echo,Building ecc...)
+	+cd ecc && $(_MAKE)
+
+ecs: ecere libec
+	@$(call echo,Building ecs...)
+	+cd ecs && $(_MAKE)
+
 cleantarget: bindir
 	$(call rm,$(OBJ)ecp$(E) $(OBJ)ecc$(E) $(OBJ)ecs$(E))
 ifdef WINDOWS_TARGET
@@ -24,19 +44,19 @@ ifdef WINDOWS_TARGET
 endif
 
 clean: cleantarget
-	cd ecere && $(MAKE) clean
-	cd libec && $(MAKE) clean
-	cd ecp && $(MAKE) clean
-	cd ecc && $(MAKE) clean
-	cd ecs && $(MAKE) clean
+	+cd ecere && $(_MAKE) clean
+	+cd libec && $(_MAKE) clean
+	+cd ecp && $(_MAKE) clean
+	+cd ecc && $(_MAKE) clean
+	+cd ecs && $(_MAKE) clean
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
-	cd ecere && $(MAKE) realclean
-	cd libec && $(MAKE) realclean
-	cd ecp && $(MAKE) realclean
-	cd ecc && $(MAKE) realclean
-	cd ecs && $(MAKE) realclean
+	+cd ecere && $(_MAKE) realclean
+	+cd libec && $(_MAKE) realclean
+	+cd ecp && $(_MAKE) realclean
+	+cd ecc && $(_MAKE) realclean
+	+cd ecs && $(_MAKE) realclean
 
 distclean:
 	$(MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
@@ -44,23 +64,3 @@ distclean:
 Makefile: ;
 $(_CF_DIR)crossplatform.mk: ;
 $(_CF_DIR)default.cf: ;
-
-ecere:
-	@$(call echo,Building ecere...)
-	cd ecere && $(MAKE)
-
-libec:
-	@$(call echo,Building ec...)
-	cd libec && $(MAKE)
-
-ecp: ecere libec
-	@$(call echo,Building ecp...)
-	cd ecp && $(MAKE)
-
-ecc: ecere libec
-	@$(call echo,Building ecc...)
-	cd ecc && $(MAKE)
-
-ecs: ecere libec
-	@$(call echo,Building ecs...)
-	cd ecs && $(MAKE)
