tarball,Makefiles; uniform use of _CF_DIR when importing crossplatform.mk and default.cf in makefiles.

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -5,8 +5,10 @@ endif
 
 CONFIG := release
 
-include ../crossplatform.mk
-include ../default.cf
+_CF_DIR = ../
+
+include $(_CF_DIR)crossplatform.mk
+include $(_CF_DIR)default.cf
 
 all: ecp ecc ecs
 
