--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -59,3 +59,7 @@ distclean:
 	cd ecp && $(_MAKE) distclean
 	cd ecc && $(_MAKE) distclean
 	cd ecs && $(_MAKE) distclean
+
+Makefile: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
