--- a/compiler/libec/Makefile.bootstrap
+++ b/compiler/libec/Makefile.bootstrap
@@ -261,3 +261,7 @@ realclean: cleantarget
 
 distclean: cleantarget
 	$(call rmr,obj/)
+
+Makefile.bootstrap: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)$(TARGET_PLATFORM)-$(COMPILER).cf: ;
