--- a/deps/jpeg-9a/Makefile
+++ b/deps/jpeg-9a/Makefile
@@ -359,3 +359,7 @@ realclean: cleantarget
 
 distclean: cleantarget
 	$(call rmr,obj/)
+
+Makefile: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
