--- a/deps/libpng-1.6.12/Makefile
+++ b/deps/libpng-1.6.12/Makefile
@@ -197,3 +197,7 @@ realclean: cleantarget
 
 distclean: cleantarget
 	$(call rmr,obj/)
+
+Makefile: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
