--- a/deps/zlib-1.2.8/Makefile
+++ b/deps/zlib-1.2.8/Makefile
@@ -195,3 +195,7 @@ realclean: cleantarget
 
 distclean: cleantarget
 	$(call rmr,obj/)
+
+Makefile: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
