--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -2054,6 +2054,10 @@ realclean: cleantarget
 distclean: cleantarget
 	$(call rmr,obj/)
 
+Makefile: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
+
 #troubleshoot:
 #	@$(call echo,OBJECTS = $(OBJECTS))
 
