--- a/ecere/Makefile.vanilla
+++ b/ecere/Makefile.vanilla
@@ -1472,3 +1472,7 @@ realclean: cleantarget
 
 distclean: cleantarget
 	$(call rmr,obj/)
+
+Makefile.vanilla: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
