tarball,Makefiles: add empty recipe rules for makefiles and their includes. they are not targets. this reduces a lot of the -d output of make. could also make build slightly more efficient.

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -59,3 +59,7 @@ distclean:
 	cd ecp && $(MAKE) distclean
 	cd ecc && $(MAKE) distclean
 	cd ecs && $(MAKE) distclean
+
+Makefile: ;
+$(_CF_DIR)crossplatform.mk: ;
+$(_CF_DIR)default.cf: ;
