--- a/ecere/Makefile.installer
+++ b/ecere/Makefile.installer
@@ -489,12 +489,12 @@ CECFLAGS += -cpp $(_CPP)
 all: objdir $(TARGET)
 
 objdir:
-	$(if $(wildcard $(OBJ)),,$(call mkdirq,$(OBJ)))
+	$(if $(wildcard $(OBJ)),,$(call mkdir,$(OBJ)))
 	$(if $(ECERE_SDK_SRC),$(if $(wildcard $(call escspace,$(ECERE_SDK_SRC)/crossplatform.mk)),,@$(call echo,Ecere SDK Source Warning: The value of ECERE_SDK_SRC is pointing to an incorrect ($(ECERE_SDK_SRC)) location.)),)
 	$(if $(ECERE_SDK_SRC),,$(if $(ECP_DEBUG)$(ECC_DEBUG)$(ECS_DEBUG),@$(call echo,ECC Debug Warning: Please define ECERE_SDK_SRC before using ECP_DEBUG, ECC_DEBUG or ECS_DEBUG),))
 
 $(OBJ)$(MODULE).main.ec: $(SYMBOLS) $(COBJECTS)
-	@$(call rmq,$(OBJ)symbols.lst)
+	@$(call rm,$(OBJ)symbols.lst)
 	@$(call touch,$(OBJ)symbols.lst)
 	@$(call echo,$(SYMBOLS1)) >> $(OBJ)symbols.lst
 	@$(call echo,$(SYMBOLS2)) >> $(OBJ)symbols.lst
@@ -511,7 +511,7 @@ $(OBJ)$(MODULE).main.c: $(OBJ)$(MODULE).main.ec
 $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
-	@$(call rmq,$(OBJ)objects.lst)
+	@$(call rm,$(OBJ)objects.lst)
 	@$(call touch,$(OBJ)objects.lst)
 	@$(call echo,$(_OBJECTS)) >> $(OBJ)objects.lst
 	@$(call echo,$(OBJ)$(MODULE).main$(O)) >> $(OBJ)objects.lst
@@ -1828,39 +1828,39 @@ $(OBJ)$(MODULE).main$(O): $(OBJ)$(MODULE).main.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(OBJ)$(MODULE).main.c -o $(call quote_path,$@)
 
 cleantarget: objdir
-	$(call rmq,$(OBJ)$(MODULE).main.o $(OBJ)$(MODULE).main.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main$(I) $(OBJ)$(MODULE).main$(S))
-	$(call rmq,$(OBJ)symbols.lst)
-	$(call rmq,$(OBJ)objects.lst)
-	$(call rmq,$(TARGET))
+	$(call rm,$(OBJ)$(MODULE).main.o $(OBJ)$(MODULE).main.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main$(I) $(OBJ)$(MODULE).main$(S))
+	$(call rm,$(OBJ)symbols.lst)
+	$(call rm,$(OBJ)objects.lst)
+	$(call rm,$(TARGET))
 ifdef SHARED_LIBRARY_TARGET
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
-	$(call rmq,$(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)))
-	$(call rmq,$(OBJ)$(LP)$(MODULE)$(SO))
+	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)))
+	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO))
 endif
 endif
 endif
 
 clean: cleantarget
-	$(call rmq,$(_OBJECTS))
-	$(call rmq,$(_ECOBJECTS1))
-	$(call rmq,$(_ECOBJECTS2))
-	$(call rmq,$(_ECOBJECTS3))
-	$(call rmq,$(_COBJECTS1))
-	$(call rmq,$(_COBJECTS2))
-	$(call rmq,$(_COBJECTS3))
-	$(call rmq,$(_BOWLS1))
-	$(call rmq,$(_BOWLS2))
-	$(call rmq,$(_BOWLS3))
-	$(call rmq,$(_IMPORTS1))
-	$(call rmq,$(_IMPORTS2))
-	$(call rmq,$(_IMPORTS3))
-	$(call rmq,$(_SYMBOLS1))
-	$(call rmq,$(_SYMBOLS2))
-	$(call rmq,$(_SYMBOLS3))
+	$(call rm,$(_OBJECTS))
+	$(call rm,$(_ECOBJECTS1))
+	$(call rm,$(_ECOBJECTS2))
+	$(call rm,$(_ECOBJECTS3))
+	$(call rm,$(_COBJECTS1))
+	$(call rm,$(_COBJECTS2))
+	$(call rm,$(_COBJECTS3))
+	$(call rm,$(_BOWLS1))
+	$(call rm,$(_BOWLS2))
+	$(call rm,$(_BOWLS3))
+	$(call rm,$(_IMPORTS1))
+	$(call rm,$(_IMPORTS2))
+	$(call rm,$(_IMPORTS3))
+	$(call rm,$(_SYMBOLS1))
+	$(call rm,$(_SYMBOLS2))
+	$(call rm,$(_SYMBOLS3))
 
 realclean: cleantarget
-	$(call rmrq,$(OBJ))
+	$(call rmr,$(OBJ))
 
 distclean: cleantarget
-	$(call rmrq,obj/)
+	$(call rmr,obj/)
