--- a/compiler/bootstrap/ecc/Makefile
+++ b/compiler/bootstrap/ecc/Makefile
@@ -95,7 +95,7 @@ endif
 all: objdir $(TARGET)
 
 objdir:
-	$(if $(wildcard $(OBJ)),,$(call mkdirq,$(OBJ)))
+	$(if $(wildcard $(OBJ)),,$(call mkdir,$(OBJ)))
 
 $(TARGET): $(SOURCES) $(RESOURCES) | objdir $(SYMBOLS) $(OBJECTS)
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
@@ -112,11 +112,11 @@ $(OBJ)ecc.main.o: bootstrap/ecc.main.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c bootstrap/ecc.main.c -o $(OBJ)ecc.main.o
 
 clean: objdir
-	$(call rmq,$(TARGET))
-	$(call rmq,$(OBJECTS))
+	$(call rm,$(TARGET))
+	$(call rm,$(OBJECTS))
 
 realclean: objdir
-	$(call rmrq,$(OBJ))
+	$(call rmr,$(OBJ))
 
 distclean: objdir
-	$(call rmrq,obj/)
+	$(call rmr,obj/)
