--- a/compiler/bootstrap/libec/Makefile
+++ b/compiler/bootstrap/libec/Makefile
@@ -111,7 +111,7 @@ CECFLAGS += -cpp $(_CPP)
 all: objdir $(TARGET)
 
 objdir:
-	$(if $(wildcard $(OBJ)),,$(call mkdirq,$(OBJ)))
+	$(if $(wildcard $(OBJ)),,$(call mkdir,$(OBJ)))
 
 $(TARGET): $(SOURCES) $(RESOURCES) | objdir $(SYMBOLS) $(OBJECTS)
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
@@ -182,11 +182,11 @@ $(OBJ)bsl.o: ../bsl.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c ../bsl.c -o $(OBJ)bsl.o
 
 clean: objdir
-	$(call rmq,$(TARGET))
-	$(call rmq,$(OBJECTS))
+	$(call rm,$(TARGET))
+	$(call rm,$(OBJECTS))
 
 realclean: objdir
-	$(call rmrq,$(OBJ))
+	$(call rmr,$(OBJ))
 
 distclean: objdir
-	$(call rmrq,obj/)
+	$(call rmr,obj/)
