ear/extract/Makefile: Setting time stamp of extract to that of source - For reproducible builds in Debian packages

--- a/ear/extract/Makefile
+++ b/ear/extract/Makefile
@@ -220,6 +220,9 @@ endif
 else
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
 endif
+ifdef DEBIAN_PACKAGE
+	touch -r extract.ec $(OBJ)extract.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main.c $(OBJECTS) $(SYMBOLS) $(TARGET)
+endif
 
 # SYMBOL RULES
 
