--- a/deps/libpng-1.6.12/Makefile
+++ b/deps/libpng-1.6.12/Makefile
@@ -104,7 +104,7 @@ $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
 	@$(call rm,$(OBJ)objects.lst)
 	@$(call touch,$(OBJ)objects.lst)
-	@$(call echo,$(_OBJECTS)) >> $(OBJ)objects.lst
+	$(call addtolistfile,$(_OBJECTS),$(OBJ)objects.lst)
 ifndef STATIC_LIBRARY_TARGET
 	$(CC) $(OFLAGS) @$(OBJ)objects.lst $(LIBS) -o $(TARGET) $(INSTALLNAME)
 ifndef NOSTRIP
