ide: move ide configuration files to new ~/.ecereIDE/ location. use econ format. separate recentFiles and recentWorkspaces into their own files. Tweak dotPrefix so that config file locations don't double the dot.

--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -85,7 +85,8 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w \
+			 -DOUTSIDE_IDE_SETTINGS_USE
 
 ECFLAGS += -module $(MODULE)
 ECFLAGS += \
