--- a/samples/android/android/AndroidManifest.xml
+++ b/samples/android/android/AndroidManifest.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.ecere.Hello"
+        package="com.ecere.hello"
         android:versionCode="1"
         android:versionName="1.0">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <uses-sdk android:minSdkVersion="9" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!-- This .apk has no Java code itself, so set hasCode to false. -->
-    <application android:label="@string/app_name" android:hasCode="false">
+    <application
+      android:label="@string/app_name"
+      android:hasCode="true"
+      android:debuggable="true"
+      android:hardwareAccelerated="true">
 
         <!-- Our activity is the built-in NativeActivity framework class. This will take care of integrating with our NDK code. -->
-        <activity android:name="android.app.NativeActivity"
+        <activity android:name="hello"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of our .so -->
