--- a/ear/Makefile
+++ b/ear/Makefile
@@ -10,26 +10,26 @@ include $(_CF_DIR)default.cf
 
 all:
 	@$(call echo,Building self-extract tool...)
-	cd extract && $(MAKE)
+	cd extract && $(_MAKE)
 	@$(call echo,Building eAR command line tool...)
-	cd cmd && $(MAKE)
+	cd cmd && $(_MAKE)
 
 nores:
 	@$(call echo,Building eAR command line tool...)
-	cd cmd && $(MAKE) nores
+	cd cmd && $(_MAKE) nores
 
 cleantarget:
-	cd extract && $(MAKE) cleantarget
-	cd cmd && $(MAKE) cleantarget
+	cd extract && $(_MAKE) cleantarget
+	cd cmd && $(_MAKE) cleantarget
 
 clean:
-	cd extract && $(MAKE) clean
-	cd cmd && $(MAKE) clean
+	cd extract && $(_MAKE) clean
+	cd cmd && $(_MAKE) clean
 
 realclean:
-	cd extract && $(MAKE) realclean
-	cd cmd && $(MAKE) realclean
+	cd extract && $(_MAKE) realclean
+	cd cmd && $(_MAKE) realclean
 
 distclean:
-	cd extract && $(MAKE) distclean
-	cd cmd && $(MAKE) distclean
+	cd extract && $(_MAKE) distclean
+	cd cmd && $(_MAKE) distclean
