--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -2023,8 +2023,8 @@ ifdef LINUX_HOST
 endif
 endif
 endif
-	$(MAKE) -f Makefile.ecereCOM cleantarget
-	$(MAKE) -f Makefile.vanilla cleantarget
+	$(_MAKE) -f Makefile.ecereCOM cleantarget
+	$(_MAKE) -f Makefile.vanilla cleantarget
 
 clean: cleantarget
 	$(call rm,$(_OBJECTS))
@@ -2043,13 +2043,13 @@ clean: cleantarget
 	$(call rm,$(SYMBOLS1))
 	$(call rm,$(SYMBOLS2))
 	$(call rm,$(SYMBOLS3))
-	$(MAKE) -f Makefile.ecereCOM clean
-	$(MAKE) -f Makefile.vanilla clean
+	$(_MAKE) -f Makefile.ecereCOM clean
+	$(_MAKE) -f Makefile.vanilla clean
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
-	$(MAKE) -f Makefile.ecereCOM realclean
-	$(MAKE) -f Makefile.vanilla realclean
+	$(_MAKE) -f Makefile.ecereCOM realclean
+	$(_MAKE) -f Makefile.vanilla realclean
 
 distclean: cleantarget
 	$(call rmr,obj/)
